Update to be more generic when run on EB.  Created rackup file. Also added some view and style stuff.  Not good content yet.

--- a/public/css/talle_style.css
+++ b/public/css/talle_style.css
@@ -1,13 +1,16 @@
 body{
     font-family:sans-serif;
+    background-color: #ddd; 
+    padding: 5px;
+    margin: 0px;
 }
 
 #wrapper{
-    width:75%;
-    margin:auto;
+    
 }
 
 #header{
+	  
     background-color:#ccc;
 }
 
