--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,17 +1,17 @@
 !!!
 %html
   %head
-    %title Talle App
+    %title Talle Inc.
     %link(rel="stylesheet" href="css/talle_style.css")
   %body
     #wrapper
       #header
-        %h1 What up?
-        %h2 This is the main site page with cool links about Me!
+        %h1 Talle Inc.
+        %h2 Web Solutions
       
       #content
         =yield
 
       #footer
         %p
-          This is the footer.
+          TBD...
