--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -8,6 +8,10 @@ $background_color: #ffffff;
 $link_hover_color: #00ff00;
 $flash_background: #00ff00;
 $flash_text_color: #ffffff;
+$comment_bg_color: #dddddd;
+$comment_font_color: #222222;
+$article_bg_color: #ffffff;
+$article_font_color: #111111;
 
 
 body {
@@ -29,4 +33,21 @@ a:hover {
 	color: $flash_text_color;
 	font-weight: bold;
 	background-color: $flash_background;
+}
+
+.comment {
+	background-color: $comment_bg_color;
+	color: $comment_font_color;
+	font-size: 12px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: $comment_font_color;
+	padding: 5px;
+	margin: 5px;
+}
+
+.article {
+	background-color: $article_bg_color;
+	font-color: $article_font_color;
+	font-size: 14px;
 }
