--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,7 +6,7 @@
 <p>
 	<%= link_to "edit", edit_article_path(@article) %> 
 </p>
-<h4>Comments</h4>
+<h4>Comments (<%= @article.comments.size %>)</h4>
 <%= render partial: 'articles/comment', collection: @article.comments %>
 <%= render partial: 'comments/form' %>
 <%= link_to "<< Back to Articles List", articles_path, class: 'link' %>
