--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,2 +1,15 @@
 <h4>Post a comment</h4>
-<p>(form here)</p>
+<%= form_for [ @article, @comment] do |f| %>
+
+	<p>
+		<%= f.label :author_name, "Name" %><br />
+		<%= f.text_field :author_name %>
+	</p>
+	<p>
+		<%= f.label :body, "Comment" %><br />
+		<%= f.text_area :body %>
+	</p>
+	<p>
+		<%= f.submit 'Submit' %>
+	</p>
+<% end %>
