--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@article) do |f| %>
+<%= form_for(@article, html: {multipart: true}) do |f| %>
 	<ul>
 		<% @article.errors.full_messages.each do |error| %>
 			<li><%= error %></li>
@@ -15,6 +15,12 @@
 	<p>
 		<%= f.label :tag_list %><br />
 		<%= f.text_field :tag_list %>
+	</p>
+	<p>
+		<%# f.label :image, "Attach Image" %><br/>
+		<%# f.file_field :image %>
+		<%= file_field_tag "images[]", type: :file, multiple: true %>
+	</p>
 	<p>
 		<%= f.submit %>
 	</p>
