--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,14 +3,20 @@
 	<% @article.tags.each do |tag| %>
 		<%= link_to tag.name, tag_path(tag) %>
 	<% end %>
+</p>
+
+<% @article.attachments.each do |attachment| %>
+	<p><%= image_tag attachment.image.url %></p>
+<% end %>
 <p><%= @article.body %></p>
+
 <p>
 	<%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "Delete post?"} %> 
 </p>
 <p>
 	<%= link_to "edit", edit_article_path(@article) %> 
 </p>
-<h4>Comments (<%= @article.comments.size %>)</h4>
-<%= render partial: 'articles/comment', collection: @article.comments %>
-<%= render partial: 'comments/form' %>
+<!--h4>Comments (<%= @article.comments.size %>)</h4-->
+<%# render partial: 'articles/comment', collection: @article.comments %>
+<%# render partial: 'comments/form' %>
 <%= link_to "<< Back to Articles List", articles_path, class: 'link' %>
