Fixed updates.  Added thumb and medium sizes of images on upload.

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,7 +6,7 @@
 </p>
 
 <% @article.attachments.each do |attachment| %>
-	<p><%= image_tag attachment.image.url %></p>
+	<p><%= image_tag attachment.image.url(:thumb) %><%= image_tag attachment.image.url(:medium) %></p>
 <% end %>
 <p><%= @article.body %></p>
 
