Updated with authentication, multiple images to upload and some minor formatting of the text body in an article.

--- a/app/views/articles/_comment.html.erb
+++ b/app/views/articles/_comment.html.erb
@@ -1,4 +1,4 @@
-<div class="comment">
+<div>
 	<h4>Comment by <%= comment.author_name %></h4>
 	<p><%= comment.body %></p>
 	<p>Commented on <%= distance_of_time_in_words(comment.created_at, Time.now) %> ago</p>
