--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,7 +8,7 @@
 <% @article.attachments.each do |attachment| %>
 	<p><%= image_tag attachment.image.url(:thumb) %><%= image_tag attachment.image.url(:medium) %></p>
 <% end %>
-<p><%= @article.body %></p>
+<p><%= simple_format(@article.body) %></p>
 
 <p>
 	<%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "Delete post?"} %> 
@@ -19,4 +19,4 @@
 <!--h4>Comments (<%= @article.comments.size %>)</h4-->
 <%# render partial: 'articles/comment', collection: @article.comments %>
 <%# render partial: 'comments/form' %>
-<%= link_to "<< Back to Articles List", articles_path, class: 'link' %>
+<%= link_to "<< Back to Articles List", articles_path %>
