--- a/views/index.haml
+++ b/views/index.haml
@@ -1,25 +1,29 @@
 !!!
 %html
   %head
-    %title Eric's Place
+    %title Eric's Place2
+    %link(rel="stylesheet" href="css/styles.css")
   %body
     #wrapper
       #header
         %h1 Eric Talle
-        %h2 A place where I can relax and just geek.
  
       #content
         %h1 The Home Page
         %p
-          Blah Blah Blah
+          Blah Blah Blah Body
         %p
-          More Blah...
+          More Blah... second paragraph
  
       #side_bar
         %h1 Menu
         %p
           About
+        %p
+          Blog
+        %p
+          Work
  
       #footer
         %p
-          This is the footer.
+          Home.
